use the sonar.qualitygate.wait flag in sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,3 @@
 sonar.projectKey=cole-gannaway-sonarsource-org_python-example-jenkins_AY4awoK1E5YwdsA4sndN
+sonar.qualitygate.wait=true
+sonar.qualitygate.timeout=30
